--- a/app/src/main/res/layout/top_room_row_item.xml
+++ b/app/src/main/res/layout/top_room_row_item.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="16dp"
     android:background="@drawable/card_bg">
 
     <ImageView
@@ -12,6 +11,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:adjustViewBounds="true"
+        android:padding="7dp"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
