--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_height="64dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="@string/IB"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile" />
