--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/roboto</item>
         <item>@font/roboto_bold</item>
+        <item>@font/roboto_medium</item>
         <item>@font/rubik</item>
         <item>@font/rubik_light</item>
         <item>@font/rubik_medium</item>
