--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,15 @@
 
         <TextView
             android:id="@+id/userTextView"
-            android:inputType="text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
             android:fontFamily="@font/rubik"
+            android:inputType="text"
             android:text="Guest"
             android:textColor="#FFFFFFFF"
-            android:textSize="18sp"
+            android:textSize="10sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +34,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="76dp"
             android:fontFamily="@font/rubik_medium"
             android:text="Find Your Next Bedrooms"
             android:textColor="#FFFFFFFF"
@@ -44,9 +44,9 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            android:layout_marginTop="24dp"
+            android:layout_width="57dp"
+            android:layout_height="52dp"
+            android:layout_marginTop="44dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,12 +55,10 @@
 
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signInButton"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
-            tools:layout_editor_absoluteX="233dp"
-            tools:layout_editor_absoluteY="31dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="50dp"
+            android:layout_height="56dp"
+            android:layout_marginTop="44dp"
+            android:layout_marginEnd="84dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -79,6 +77,7 @@
             android:paddingStart="16dp"
             android:textColor="#62878F"
             app:layout_constraintEnd_toEndOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
