--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -14,7 +14,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/image1" />
+        app:srcCompat="@drawable/habitacion1" />
 
     <TextView
         android:id="@+id/nombreHabitacion"
@@ -149,14 +149,13 @@
         app:layout_constraintTop_toBottomOf="@+id/precio" />
 
     <TextView
-        android:id="@+id/id"
+        android:id="@+id/idHabitacion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="12"
+        android:layout_marginEnd="208dp"
+        android:text="1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.597"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgUrl" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
