--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,18 +42,6 @@
             app:layout_constraintStart_toStartOf="@+id/userTextView"
             app:layout_constraintTop_toBottomOf="@+id/userTextView" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="57dp"
-            android:layout_height="52dp"
-            android:layout_marginTop="44dp"
-            android:layout_marginEnd="16dp"
-            android:contentDescription="@string/IB"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-            app:srcCompat="@drawable/profile" />
-
         <com.google.android.gms.common.SignInButton
             android:id="@+id/signInButton"
             android:layout_width="50dp"
@@ -65,9 +53,10 @@
 
         <EditText
             android:id="@+id/editTextTextPersonName"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="335dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/search_bg"
             android:drawableLeft="@drawable/ic_baseline_search_24"
             android:drawablePadding="16dp"
@@ -77,10 +66,26 @@
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:textColor="#62878F"
-            app:layout_constraintEnd_toEndOf="@+id/imageView"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+        <Button
+            android:id="@+id/buttonLogin"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/profile"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/IB"
+            android:layout_width="41dp"
+            android:layout_height="61dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/profile" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
