--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -148,6 +148,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
+        android:fontFamily="@font/roboto"
         android:text="Create Account"
         android:textColor="#4718AD"
         app:layout_constraintBottom_toBottomOf="@+id/textView14"
