--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,7 +70,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <Button
-            android:id="@+id/buttonLogin"
+            android:id="@+id/buttonLogOut"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:layout_marginTop="48dp"
