--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/imgUrl"
-        android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_width="426dp"
+        android:layout_height="279dp"
         android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/habitacion1" />
@@ -37,6 +37,7 @@
         android:layout_marginTop="16dp"
         android:text="Disponibilidad:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/nombreHabitacion"
         app:layout_constraintTop_toBottomOf="@+id/nombreHabitacion" />
 
@@ -47,6 +48,7 @@
         android:layout_marginTop="8dp"
         android:text="Numero de Habitacion:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
@@ -57,6 +59,7 @@
         android:layout_marginTop="16dp"
         android:text="Precio:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -67,6 +70,7 @@
         android:layout_marginTop="16dp"
         android:text="Tipo de habitacion:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -77,7 +81,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="128dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="About"
+        android:text="Detalles de Habitacion"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +93,9 @@
         android:layout_height="57dp"
         android:layout_marginTop="4dp"
         android:text="Informacion"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="?attr/colorPrimaryDark"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView10"
@@ -101,6 +108,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="si"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView7"
         app:layout_constraintTop_toBottomOf="@+id/nombreHabitacion" />
 
@@ -111,6 +119,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="12"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView8"
         app:layout_constraintTop_toBottomOf="@+id/disponiblilidad" />
 
@@ -121,31 +130,36 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:text="50.50"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView9"
         app:layout_constraintTop_toBottomOf="@+id/numeroHabitacion" />
 
     <Button
         android:id="@+id/buttonInsertar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_width="127dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/home_bg"
         android:onClick="enviar"
         android:text="Reservar"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.776"
+        app:layout_constraintHorizontal_bias="0.915"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imgUrl" />
 
     <EditText
         android:id="@+id/numeroPersonas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="189dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="52dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name"
-        android:textSize="8sp"
+        android:hint="Ingrese el numero de personas"
+        android:inputType="number"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textViewpersonas"
         app:layout_constraintTop_toBottomOf="@+id/precio" />
 
@@ -156,6 +170,7 @@
         android:layout_marginTop="60dp"
         android:text="Numero de personas:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -164,8 +179,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="112dp"
-        android:text="fecha de reserva:"
+        android:text="Fecha de reserva:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textViewpersonas"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -173,9 +189,10 @@
         android:id="@+id/textViewpersonas3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
-        android:text="fecha de salida:"
+        android:layout_marginTop="164dp"
+        android:text="Fecha de salida:"
         android:textColor="#102D40"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/textViewpersonas2"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
@@ -184,30 +201,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/textView6"
         app:layout_constraintTop_toBottomOf="@+id/precio" />
 
     <EditText
         android:id="@+id/fechaEntrada"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="189dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
+        android:hint="Seleccione fecha de Entrada"
         android:inputType="date"
-        android:textSize="8sp"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/numeroPersonas"
         app:layout_constraintTop_toBottomOf="@+id/numeroPersonas" />
 
     <EditText
         android:id="@+id/fechaSalida"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_width="190dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Seleccione fecha de Salida"
         android:inputType="date"
-        android:textSize="8sp"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/fechaEntrada"
         app:layout_constraintTop_toBottomOf="@+id/fechaEntrada" />
 
