--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,16 @@
 
         <TextView
             android:id="@+id/userTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/rubik"
+            android:layout_width="234dp"
+            android:layout_height="53dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/roboto_bold"
             android:inputType="text"
             android:text="Guest"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             android:textColor="#FFFFFFFF"
-            android:textSize="10sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,55 +35,39 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="76dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/rubik_medium"
-            android:text="Find Your Next Bedrooms"
+            android:text="Encuentra tu siguiente estadia!"
             android:textColor="#FFFFFFFF"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/userTextView"
             app:layout_constraintTop_toBottomOf="@+id/userTextView" />
 
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/signInButton"
-            android:layout_width="50dp"
-            android:layout_height="56dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="136dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <EditText
             android:id="@+id/editTextTextPersonName"
             android:layout_width="335dp"
             android:layout_height="46dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/search_bg"
             android:drawableLeft="@drawable/ic_baseline_search_24"
             android:drawablePadding="16dp"
             android:ems="10"
             android:fontFamily="@font/rubik_light"
-            android:hint="Find Bedrooms"
+            android:hint="Busca Habitaciones"
             android:inputType="textPersonName"
             android:paddingStart="16dp"
             android:textColor="#62878F"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-        <Button
-            android:id="@+id/buttonLogOut"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/profile"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <ImageView
             android:id="@+id/IB"
-            android:layout_width="41dp"
-            android:layout_height="61dp"
+            android:layout_width="109dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/profile" />
@@ -96,22 +81,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Recent"
+        android:text="Recientes"
         android:textColor="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:fontFamily="@font/roboto_bold"
-        android:text="See All"
-        android:textColor="@android:color/background_dark"
-        app:layout_constraintBottom_toBottomOf="@+id/textView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView3" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recent_recycle"
@@ -131,7 +104,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="Top Bedrooms"
+        android:text="Top Habitaciones"
         android:textColor="@android:color/background_dark"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recent_recycle" />
